# R-type-mirror

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  comparative_study.md  vcpkg.json
.github/workflows/: ci-build.yml  ci-functional-tests.yml  ci-mirror.yml  ci-release-on-main.yml  release-on-main.yml
R-Engine/: CMakeLists.txt
R-Engine/R-Graphic/: CMakeLists.txt
R-Engine/R-Graphic/include/R-Graphic/: Graphic.h
R-Engine/include/R-Engine/: Engine.h  Export.h
R-type Client/: CMakeLists.txt  Main.cpp
R-type Server/: CMakeLists.txt
R_Engine/R_Ecs/include/R_Ecs/: Components.hpp  Entity.hpp  Systems.hpp
R_Engine/R_Ecs/include/R_Ecs/iterator/: Indexed_zipper_iterator.hpp
R_Engine/R_Graphic/: CMakeLists.txt
R_Engine/R_Graphic/Src/: App.cpp  Background.cpp  Renderer.cpp  Texture.cpp  Window.cpp
R_Engine/R_Graphic/include/R_Graphic/: Background.hpp  Renderer.hpp  Texture.hpp  Window.hpp
Src/Client/: CMakeLists.txt  Main.cpp  Rtype.cpp
Src/Client/include/: Rtype.hpp
Src/Client/src/: Background.cpp  Player.cpp  Rtype.cpp
Src/Server/: CMakeLists.txt  Main.cpp
configs/: accessibility_config.json  audio_config.json
configs/enemy/: boss.json  boss_laser.json  charger.json  crawler.json  shooter.json  spinner.json
configs/levels/: level1.json  level2.json  level3.json
docs/: comparative_study.md
docs/architecture/: ARCHITECTURE.md
docs/profiling/: README.md  USAGE_RTYPE.md
docs/protocol/: PROTOCOL.md  protocol.rfc.md  protocol.rfc.txt
doodle/: CMakeLists.txt  vcpkg.json
doodle/engine/: CMakeLists.txt  Engine.hpp
doodle/engine/ecs/: Components.hpp  EntityFactory.hpp  Sparse_array.hpp  Systems.hpp
doodle/engine/ecs/iterator/: Zipper_iterator.hpp
doodle/engine/network/: UdpSocket.cpp
doodle/engine/renderer/: App.hpp  Error.hpp  Renderer.cpp  Renderer.hpp
doodle/src/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp  main.cpp
doodle/src/common/: Packets.hpp
engine/: CMakeLists.txt
engine/ecs/: Components.hpp  Components_client_sfml.hpp  Entity.hpp  Registry.hpp  Sparse_array.hpp
engine/ecs/iterator/: Indexed_zipper_iterator.hpp  Zipper.hpp  Zipper_iterator.hpp
save/R_Engine/R_Ecs/include/R_Ecs/: Registry.hpp  Sparse_array.hpp  Systems.hpp
save/R_Engine/R_Ecs/include/R_Ecs/iterator/: Indexed_zipper.hpp  Zipper.hpp  Zipper_iterator.hpp
save/R_Engine/R_Graphic/Src/: App.cpp  Renderer.cpp
save/R_Engine/R_Graphic/include/R_Graphic/: App.hpp  Vectors.hpp
save/Src/Client/: CMakeLists.txt
save/Src/Client/include/: Background.hpp  Player.hpp  Rtype.hpp
save/Src/Client/src/: Background.cpp  Main.cpp  Player.cpp  Rtype.cpp
save/docs/architecture/: ARCHITECTURE.md
save/docs/protocol/: PROTOCOL.md  protocol.rfc.txt
save/shared/protocol/: packet.hpp
shared/network/: Network.cpp  Network.hpp
shared/protocol/: packet.hpp  serializer.hpp
src/client/: Background.cpp  Background.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Gameover.cpp  Gameover.hpp  Hud.cpp  Hud.hpp  Lobby.cpp  Main.cpp  Menu.cpp  Menu.hpp  Player.cpp  Player.hpp  Rtype.cpp  Rtype.hpp
src/common/: Accessibility.cpp  Accessibility.hpp  Components.hpp  Components_client.hpp  Components_client_sdl.hpp  Components_client_sfml.hpp  Layers.hpp  Packets.hpp  Serialization.hpp  Systems.cpp  Systems.hpp  Systems_client_sdl.hpp  Systems_client_sfml.hpp
src/engine/: CMakeLists.txt  Engine.hpp
src/engine/audio/: AudioManager.cpp  AudioManager.hpp  Music.cpp  Music.hpp
src/engine/ecs/: Components_client.hpp  Components_client_sfml.hpp  Entity.hpp  EntityFactory.hpp  Registry.hpp  Sparse_array.hpp  Systems.hpp  Systems_client_sfml.hpp
src/engine/ecs/iterator/: Indexed_zipper.hpp  Indexed_zipper_iterator.hpp  Zipper.hpp  Zipper_iterator.hpp
src/engine/events/: Events.hpp
src/engine/network/: Endpoint.hpp  IoContext.cpp  IoContext.hpp  NetClient.cpp  NetClient.hpp  NetServer.cpp  NetServer.hpp  ThreadSafeQueue.hpp  UdpSocket.cpp  UdpSocket.hpp  Udpsocket.hpp
src/engine/network/detail/: IoContextInternal.hpp
src/engine/profiling/: Profiler.cpp  Profiler.hpp  ProfilerOverlay.cpp  ProfilerOverlay.hpp
src/engine/renderer/: App.cpp  App.hpp  Error.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Vectors.hpp  Window.cpp  Window.hpp
src/server/: CMakeLists.txt  Components_ai.hpp  EnemyConfig.hpp  GameLogic.cpp  GameLogic.hpp  HandleConnect.cpp  HandleInput.cpp  LevelManager.cpp  LevelManager.hpp  Main.cpp  Server.cpp  Server.hpp  ServerUtils.cpp  ServerUtils.hpp  SpawnProjectile.cpp  SpawnProjectile.hpp  System_ai.hpp
src/server/Lobby/: Lobby.cpp  Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp
src/server/PacketHandle/: HandleConnect.cpp  HandleInput.cpp
src/server/enemies/: Boss.cpp  Boss.hpp  Crawler.cpp  Crawler.hpp  Shooter.cpp  Shooter.hpp
src/server/register/: AreaEffect.cpp  Bounds.cpp  Collision.cpp  Gravity.cpp  HealthAndSpawn.cpp  ProjectileMovement.cpp
